--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
       finish within 7 days (Week), finish within 30 days (Month),
       and finish within 365 days (Year).
       <br/><br/>
-      Once tasks count down to 0, they become "overdue".  Tasks can be rescheduled
-      at any time, clicking T/W/M/Y under reschedule will simply set their due date
+      Once tasks count down to 0, they become "overdue". Tasks can be rescheduled
+      at any time -- clicking T/W/M/Y under reschedule will simply set their due date
       to one day/week/month/year from now. This should work well for repeating tasks
       like "Get groceries".
       <br/><br/>
-      No todo data is sent or received from the server. Data is stored in <code>localStorage</code>, and supports saving and loading to/from JSON.
+      No todo data is sent or received to/from the server. Data is stored in your browser's <code>localStorage</code>, and data can be saved/loaded to/from JSON.
 
 
     </div>
